# ZKP-gRPC-server

./: Cargo.toml  build.rs  docker-compose.yaml
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs
