[package]
name = "zkp_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
hex = "0.4.3"
prost = "0.11"
tonic = "0.9"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}  #async rust runtime

[build-dependencies]
prost-build = "0.13.3"
tonic-build = "0.9"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"